heraku ref error

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-Django==1.8.6
+Django==1.8.4
+Markdown==2.6
 MySQL-python==1.2.5
+PyYAML==3.11
 argparse==1.2.1
+decorator==4.0.4
 distribute==0.6.24
 dj-database-url==0.3.0
 dj-static==0.0.6
@@ -10,10 +13,22 @@ djangorestframework==3.1.0
 flake8==2.5.0
 gunicorn==19.3.0
 importanize==0.4.1
+ipython==4.0.0
+ipython-genutils==0.1.0
 mccabe==0.3.1
+path.py==8.1.2
 pep8==1.5.7
+pexpect==4.0.1
+pickleshare==0.5
 psycopg2==2.6.1
+ptyprocess==0.5
+py-mysql2pgsql==0.1.5
 pyflakes==1.0.0
+pystache==0.5.4
+simplegeneric==0.8.1
 six==1.10.0
+static==1.1.1
 static3==0.6.1
+termcolor==1.1.0
+traitlets==4.0.0
 wsgiref==0.1.2
