--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 Django==1.8.4
+setuptools
 Markdown==2.6
 MySQL-python==1.2.5
 PyYAML==3.11
 argparse==1.2.1
 decorator==4.0.4
-distribute==0.6.24
 dj-database-url==0.3.0
 dj-static==0.0.6
 django-filter==0.9.2
@@ -13,8 +13,6 @@ djangorestframework==3.1.0
 flake8==2.5.0
 gunicorn==19.3.0
 importanize==0.4.1
-ipython==4.0.0
-ipython-genutils==0.1.0
 mccabe==0.3.1
 path.py==8.1.2
 pep8==1.5.7
